# dwalker

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yml  release.yml
cmake/: phlib.cmake
scripts/: download.ps1
src/dwalker/: CMakeLists.txt
src/dwalker/include/: ApiSet.h  ApiSet.hpp  BinaryCache.h  BinaryCache.hpp  DWalker.h  DWalker.hpp  FindPE.h  FindPE.hpp  Logger.hpp  PE.h  PEManager.h  PEManager.hpp  PHLib.h  PHLib.hpp  SXSManifest.h  SXSManifest.hpp
src/dwalker/source/: ApiSet.cpp  BinaryCache.cpp  DWalker.cpp  FindPE.cpp  Logger.cpp  PE.cpp  PEManager.cpp  PHLib.cpp  SXSManifest.cpp  main.cpp
test/: sample.one.dll.manifest  sample.two.dll.manifest
